# hypothesis_torch_utils

./: .gitignore  README.md  env.yml  flake-module.nix  flake.nix  pyproject.toml
.github/workflows/: ci.yml  lint.yml  typecheck.yml
hypothesis_torch_utils/strategies/: _3hw_tensors.py  _n3hw_tensors.py  chw_tensors.py  devices.py  devices_and_dtypes.py  dtypes.py  memory_formats.py  nchw_tensors.py  sized_3hw_tensors.py  sized_n3hw_tensors.py
nix/: default.nix  hypothesis_torch_utils.nix
nix/devShells/: default.nix
nix/extensions/: hypothesis_torch_utils.nix
nix/overlays/: default.nix
