[build-system]
requires = ["setuptools >= 65", "wheel"]

[project]
name = "hypothesis_torch_utils"
version = "0.1.0"
description = "Hypothesis utilities for PyTorch"
authors = [{ name = "Connor Baker", email = "connorbaker01@gmail.com" }]
maintainers = [{ name = "Connor Baker", email = "connorbaker01@gmail.com" }]
readme = "README.md"
urls = { homepage = "https://github.com/ConnorBaker/hypothesis_torch_utils" }
requires-python = ">=3.10"
dependencies = ["torch==2.0.0.*", "hypothesis==6.61.0"]

[project.optional-dependencies]
lint = ["black==22.12.0", "flake8==6.0.0", "isort==5.11.4"]
typecheck = ["pyright==1.1.284", "mypy==0.991"]

[tool.setuptools]
include-package-data = true
package-dir = { hypothesis_torch_utils = "hypothesis_torch_utils" }
package-data = { hypothesis_torch_utils = ["py.typed"] }

[tool.black]
line-length = 99
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 99
py_version = "39" # 3.10 isn't supported yet

[tool.mypy]
python_version = "3.10"
platform = "linux"
strict = true

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
