[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hypothesis_torch_utils"
version = "0.1.0"
description = "Hypothesis utilities for PyTorch"
authors = [{ name = "Connor Baker", email = "connorbaker01@gmail.com" }]
maintainers = [{ name = "Connor Baker", email = "connorbaker01@gmail.com" }]
requires-python = ">=3.10"
license.text = "Apache License 2.0"
dependencies = ["torch>=1.8", "hypothesis>=6"]

[project.optional-dependencies]
dev = ["black>=21.9b0", "mypy>=0.910", "ruff>=0.3.0"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]
line-length = 120

[tool.mypy]
python_version = "3.10"
platform = "linux"
strict = true

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
